[gd_scene load_steps=6 format=3 uid="uid://cj6a6rnrgng3q"]

[ext_resource type="Theme" uid="uid://pe8ifpbspa3e" path="res://ui/ui_theme.tres" id="1_rr4y4"]
[ext_resource type="PackedScene" uid="uid://bsh0gxheestkb" path="res://level/level.tscn" id="1_vywhi"]
[ext_resource type="Script" path="res://ui/ui.gd" id="2_0eogh"]
[ext_resource type="Script" path="res://ui/sens_line_edit.gd" id="3_l7dr0"]
[ext_resource type="Script" path="res://ui/sub_viewport_container.gd" id="4_hdvrg"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_rr4y4")
script = ExtResource("2_0eogh")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Tower of Hanoi 3D simulation by xelaxefensor"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="Disks" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/Disks"]
layout_mode = 2
text = "Number of disks:"

[node name="LineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/Disks"]
layout_mode = 2
placeholder_text = "5"

[node name="Calculate" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Calculate"

[node name="VSeparator" type="VSeparator" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Play_Pause" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Play/Pause"

[node name="Previous" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Previous"

[node name="Next" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Next"

[node name="Speed" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/Speed"]
layout_mode = 2
text = "Speed:"

[node name="LineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/Speed"]
layout_mode = 2
placeholder_text = "5"

[node name="VSeparator2" type="VSeparator" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Sensitivity" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/Sensitivity"]
layout_mode = 2
text = "Mouse sensitivity:"

[node name="LineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/Sensitivity"]
layout_mode = 2
placeholder_text = "0.5"
script = ExtResource("3_l7dr0")

[node name="SubViewportContainer" type="SubViewportContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
stretch = true
script = ExtResource("4_hdvrg")

[node name="SubViewport" type="SubViewport" parent="PanelContainer/MarginContainer/VBoxContainer/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1132, 566)
render_target_update_mode = 4

[node name="Level" parent="PanelContainer/MarginContainer/VBoxContainer/SubViewportContainer/SubViewport" node_paths=PackedStringArray("speed_line_edit") instance=ExtResource("1_vywhi")]
speed_line_edit = NodePath("../../../VBoxContainer/HBoxContainer/Speed/LineEdit")

[connection signal="text_submitted" from="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/Disks/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/Calculate" to="." method="_on_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/Calculate" to="PanelContainer/MarginContainer/VBoxContainer/SubViewportContainer/SubViewport/Level" method="_on_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/Play_Pause" to="PanelContainer/MarginContainer/VBoxContainer/SubViewportContainer/SubViewport/Level" method="_on_play_pause_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/Previous" to="PanelContainer/MarginContainer/VBoxContainer/SubViewportContainer/SubViewport/Level" method="_on_previous_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/Next" to="PanelContainer/MarginContainer/VBoxContainer/SubViewportContainer/SubViewport/Level" method="_on_next_pressed"]
[connection signal="text_submitted" from="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/Speed/LineEdit" to="PanelContainer/MarginContainer/VBoxContainer/SubViewportContainer/SubViewport/Level" method="_on_line_edit_text_submitted"]
[connection signal="text_submitted" from="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/Sensitivity/LineEdit" to="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/Sensitivity/LineEdit" method="_on_text_submitted"]
[connection signal="mouse_clicked" from="PanelContainer/MarginContainer/VBoxContainer/SubViewportContainer" to="PanelContainer/MarginContainer/VBoxContainer/SubViewportContainer/SubViewport/Level" method="_on_sub_viewport_container_mouse_clicked"]
[connection signal="mouse_entered" from="PanelContainer/MarginContainer/VBoxContainer/SubViewportContainer" to="PanelContainer/MarginContainer/VBoxContainer/SubViewportContainer" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/MarginContainer/VBoxContainer/SubViewportContainer" to="PanelContainer/MarginContainer/VBoxContainer/SubViewportContainer" method="_on_mouse_exited"]
